--- a/fireworks/manifest.json
+++ b/fireworks/manifest.json
@@ -9,8 +9,8 @@
     "description" : "",
     "orientation" : "any",
     "background_color" : "transparent",
-    "related_applications" : "",
-    "prefer_related_applications" : "false",
-    "generated" : "true",
+    "related_applications" : [],
+    "prefer_related_applications" : false,
+    "generated" : true,
     "icons" : [
     ]}
