--- a/fireworks/manifest.json
+++ b/fireworks/manifest.json
@@ -12,5 +12,25 @@
     "related_applications" : [],
     "prefer_related_applications" : false,
     "generated" : true,
-    "icons" : [
-    ]}
+    "icons": [{
+        "src": "images/touch/icon-48x48.png",
+        "sizes": "48x48",
+        "type": "image/png"
+      }, {
+        "src": "images/touch/icon-72x72.png",
+        "sizes": "72x72",
+        "type": "image/png"
+      }, {
+        "src": "images/touch/icon-96x96.png",
+        "sizes": "96x96",
+        "type": "image/png"
+      }, {
+        "src": "images/touch/icon-144x144.png",
+        "sizes": "144x144",
+        "type": "image/png"
+      }, {
+        "src": "images/touch/icon-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+      }]
+}
