--- a/fireworks/manifest.json
+++ b/fireworks/manifest.json
@@ -1,14 +1,15 @@
-{"dir" : "ltr",
+{
+    "dir" : "ltr",
     "lang" : "en",
     "name" : "Animation Demo",
     "scope" : "/fireworks/fireworks.html",
-    "display" : "browser",
+    "display" : "minimal-ui",
     "start_url" : "https://ericnewman.github.io/fireworks/fireworks.html",
     "short_name" : "Animation Demo",
     "theme_color" : "transparent",
     "description" : "",
     "orientation" : "any",
-    "background_color" : "transparent",
+    "background_color" : "#FF0000",
     "related_applications" : [],
     "prefer_related_applications" : false,
     "generated" : true,
@@ -32,5 +33,9 @@
         "src": "images/touch/icon-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
+      },{
+        "src": "/images/icons-512.png",
+        "type": "image/png",
+        "sizes": "512x512"
       }]
 }
