--- a/fireworks/manifest.json
+++ b/fireworks/manifest.json
@@ -10,6 +10,7 @@
     "description" : "",
     "orientation" : "any",
     "background_color" : "#FF0000",
+    "theme_color": "#317EFB",
     "related_applications" : [],
     "prefer_related_applications" : false,
     "generated" : true,
