--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 ericnewman.github.io_*.report.html
-games_poc/build/*
-games_poc/games_poc.bbprojectd/ericnewman.bbprojectsettings
+draftcards/build/*
+draftcards/draftcards.bbprojectd/ericnewman.bbprojectsettings
