--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "preact build",
     "serve": "preact build && preact serve",
     "dev": "preact watch",
-    "deploy": "preact build && aws s3 sync build/ s3://spages.mobileposse.com/",
+    "deploy": "preact build && aws s3 sync build/ s3://spages.mobileposse.com/ && aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
     "demo": "npm run deploy && npm run aws-clear/",
     "cache": "s3cmd --recursive modify --add-header=\"Cache-Control:public ,max-age= 31536000\" s3://spages.mobileposse.com",
     "aws-clear": "aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
@@ -54,6 +54,7 @@
     "preact-slide": "^0.4.7",
     "preact-transition-group": "^1.1.1",
     "react-notify-toast": "^0.5.0",
+    "react-particle-effect-button": "^1.0.1",
     "react-responsive-carousel": "^3.1.49",
     "react-select": "^3.0.4",
     "react-star-rating-component": "^1.4.1",
