--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "start": "per-env",
     "start:production": "npm run -s serve",
     "start:development": "npm run -s dev",
-    "build": "preact build --template src/template.html",
+    "build": "preact build --template src/template.html --prerenderUrls src/prerender-urls.json",
     "serve": "preact build --template src/template.html && preact serve",
     "dev": "preact watch --template src/template.html",
-    "deploy": "preact build --template src/template.html && aws s3 sync build/ s3://spages.mobileposse.com/ && aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
+    "deploy": "preact build --template src/template.html --prerenderUrls src/prerender-urls.json && aws s3 sync build/ s3://spages.mobileposse.com/ && aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
     "demo": "npm run deploy && npm run aws-clear/",
     "cache": "s3cmd --recursive modify --add-header=\"Cache-Control:public ,max-age= 31536000\" s3://spages.mobileposse.com",
     "aws-clear": "aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
     "lint": "eslint src",
     "purge": "./purgeSpages.sh \"spages.mobileposse.com\" \"3d\"",
+    "analyze": "bundle-analyzer build",
     "test": "jest"
   },
   "eslintConfig": {
@@ -31,8 +32,10 @@
     "per-env": "^1.0.2",
     "preact-cli": "^2.2.1",
     "preact-render-spy": "^1.2.1",
+    "s3-deploy": "^1.3.0",
     "sass-loader": "^7.1.0",
     "type-check": "^0.3.2",
+    "webpack-bundle-analyzer": "^3.4.1",
     "wordwrap": "^1.0.0"
   },
   "dependencies": {
@@ -59,8 +62,7 @@
     "react-particle-effect-button": "^1.0.1",
     "react-responsive-carousel": "^3.1.49",
     "react-select": "^3.0.4",
-    "react-star-rating-component": "^1.4.1",
-    "s3-deploy": "^1.3.0"
+    "react-star-rating-component": "^1.4.1"
   },
   "jest": {
     "verbose": true,
