--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "uRUP",
+  "name": "MetroZoneGames",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
@@ -26,13 +26,13 @@
   ],
   "devDependencies": {
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "node-sass": "^4.12.0",
     "per-env": "^1.0.2",
     "preact-cli": "^2.2.1",
     "preact-render-spy": "^1.2.1",
-    "s3-deploy": "^1.3.0",
-    "sass-loader": "^7.1.0",
+    "s3-deploy": "^1.4.0",
+    "sass-loader": "^7.3.1",
     "type-check": "^0.3.2",
     "webpack-bundle-analyzer": "^3.4.1",
     "wordwrap": "^1.0.0"
@@ -46,7 +46,11 @@
     "clear": "^0.1.0",
     "eslint": "^6.2.2",
     "eslint-config-synacor": "^3.0.4",
-    "firebase": "^6.4.2",
+    "firebase": "^6.5.0",
+    "for-own": "^1.0.0",
+    "idb": "^4.0.4",
+    "lodash.tail": "^4.1.1",
+    "mixin-object": "^3.0.0",
     "preact": "^8.5.2",
     "preact-compat": "^3.17.0",
     "preact-context": "^1.1.3",
@@ -55,7 +59,6 @@
     "preact-render-to-string": "^4.1.0",
     "preact-router": "^2.5.7",
     "preact-slide": "^0.4.7",
-    "preact-transition-group": "^1.1.1",
     "react-ga": "^2.6.0",
     "react-notify-toast": "^0.5.0",
     "react-particle-effect-button": "^1.0.1",
