--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "aws-clear": "aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
     "lint": "eslint src",
     "purge": "./purgeSpages.sh \"spages.mobileposse.com\" \"1d\"",
-    "analyze": "bundle-analyzer build",
+    "analyze": "preact build --analyze --template src/template.html",
     "light": "lighthouse https://spages.mobileposse.com/dash/2 --view"
   },
   "eslintConfig": {
@@ -25,8 +25,17 @@
     "build/*"
   ],
   "devDependencies": {
+    "aws": "0.0.3-2",
+    "cache": "^2.1.0",
+    "clear": "^0.1.0",
+    "eslint": "^6.4.0",
+    "eslint-config-synacor": "^3.0.5",
+    "eslint-plugin-react": "^7.14.3",
+    "for-own": "^1.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
+    "lodash.tail": "^4.1.1",
+    "mixin-object": "^3.0.0",
     "node-sass": "^4.12.0",
     "per-env": "^1.0.2",
     "preact-cli": "^2.2.1",
@@ -34,35 +43,21 @@
     "s3-deploy": "^1.4.0",
     "sass-loader": "^7.3.1",
     "type-check": "^0.3.2",
-    "webpack-bundle-analyzer": "^3.4.1",
-    "wordwrap": "^1.0.0",
-    "aws": "0.0.3-2",
-    "cache": "^2.1.0",
-    "clear": "^0.1.0",
-    "eslint": "^6.3.0",
-    "eslint-config-synacor": "^3.0.4"
+    "webpack-bundle-analyzer": "^3.5.1",
+    "webpack-dashboard": "^3.2.0",
+    "wordwrap": "^1.0.0"
   },
   "dependencies": {
-    "@firebase/app": "^0.4.16",
-    "@firebase/auth": "^0.11.8",
-    "@firebase/database": "^0.4.12",
-    "firebase": "^6.6.0",
-    "for-own": "^1.0.0",
-    "lodash.tail": "^4.1.1",
-    "mixin-object": "^3.0.0",
-    "preact": "^8.5.2",
-    "preact-compat": "^3.17.0",
+    "preact": "^10.0.0-rc.3",
     "preact-context": "^1.1.3",
-    "preact-material-components": "^1.4.3",
-    "preact-progress": "^1.0.0",
-    "preact-render-to-string": "^4.1.0",
-    "preact-router": "^2.5.7",
-    "preact-slide": "^0.4.7",
+    "preact-material-components": "^1.6.0",
+    "preact-render-to-string": "^5.0.6",
+    "preact-router": "^3.0.1",
     "react-ga": "^2.6.0",
+    "react-gpt": "^2.0.1",
     "react-notify-toast": "^0.5.0",
     "react-particle-effect-button": "^1.0.1",
-    "react-responsive-carousel": "^3.1.50",
-    "react-select": "^3.0.4",
+    "react-select": "^3.0.5",
     "react-star-rating-component": "^1.4.1"
   }
 }
