--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "start": "per-env",
     "start:production": "npm run -s serve",
     "start:development": "npm run -s dev",
-    "build": "preact build --template src/template.html --prerenderUrls src/prerender-urls.json",
-    "serve": "preact build --template src/template.html && preact serve",
-    "dev": "preact watch --template src/template.html",
-    "deploy": "preact build --template src/template.html --prerenderUrls src/prerender-urls.json && aws s3 sync build/ s3://spages.mobileposse.com/ && aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
+    "build": "preact build  --prerenderUrls src/prerender-urls.json",
+    "serve": "preact build  && preact serve",
+    "dev": "preact watch",
+    "deploy": "preact build --prerenderUrls src/prerender-urls.json && aws s3 sync build/ s3://spages.mobileposse.com/ && aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
     "cache": "s3cmd --recursive modify --add-header=\"Cache-Control:public ,max-age= 31536000\" s3://spages.mobileposse.com",
     "aws-clear": "aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
     "lint": "eslint src",
     "purge": "./purgeSpages.sh \"spages.mobileposse.com\" \"1d\"",
-    "analyze": "preact build --analyze --template src/template.html",
+    "analyze": "preact build --analyze ",
     "light": "lighthouse https://spages.mobileposse.com/dash/2 --view"
   },
   "eslintConfig": {
@@ -24,6 +24,10 @@
   "eslintIgnore": [
     "build/*"
   ],
+  "performance": {
+    "maxAssetSize": 500000,
+    "maxEntrypointSize": 500000
+  },
   "devDependencies": {
     "aws": "0.0.3-2",
     "cache": "^2.1.0",
@@ -56,8 +60,6 @@
     "react-ga": "^2.6.0",
     "react-gpt": "^2.0.1",
     "react-notify-toast": "^0.5.0",
-    "react-particle-effect-button": "^1.0.1",
-    "react-select": "^3.0.5",
     "react-star-rating-component": "^1.4.1"
   }
 }
