Factored Out AdUnit, and re-implemented Opt-Out as a menu choice.

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "per-env",
     "start:production": "npm run -s serve",
     "start:development": "npm run -s dev",
-    "build": "preact build  --prerenderUrls src/prerender-urls.json",
-    "serve": "preact build  && preact serve",
-    "dev": "preact watch",
-    "deploy": "preact build --prerenderUrls src/prerender-urls.json && aws s3 sync build/ s3://spages.mobileposse.com/ && aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
+    "build": "preact build --template \"${PWD}/src/template.html\" --prerenderUrls src/prerender-urls.json",
+    "serve": "preact build --template \"${PWD}/src/template.html\" && preact serve",
+    "dev":   "preact watch --template \"${PWD}/src/template.html\"",
+    "deploy":"preact build --template '${PWD}/src/template.html' --prerenderUrls src/prerender-urls.json && aws s3 sync build/ s3://spages.mobileposse.com/ && aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
     "cache": "s3cmd --recursive modify --add-header=\"Cache-Control:public ,max-age= 31536000\" s3://spages.mobileposse.com",
     "aws-clear": "aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
     "lint": "eslint src",
