--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start:production": "npm run -s serve",
     "start:development": "npm run -s dev",
     "build": "preact build --template \"${PWD}/src/template.html\" --prerenderUrls \"${PWD}/prerender-urls.json\"",
-    "serve": "preact build --template \"${PWD}/src/template.html\" && preact serve",
+    "serve": "preact build --template \"${PWD}/src/template.html\" && ws -d build --http2",
     "dev": "preact watch --template \"${PWD}/src/template.html\"",
-    "deploy": "preact build --template '${PWD}/src/template.html' --prerenderUrls \"${PWD}/prerender-urls.json\" && aws s3 sync build/ s3://spages.mobileposse.com/ && aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
+    "deploy": "preact build --template \"${PWD}/src/template.html\" --prerenderUrls \"${PWD}/prerender-urls.json\" && aws s3 sync build/ s3://spages.mobileposse.com/ && aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
     "cache": "s3cmd --recursive modify --add-header=\"Cache-Control:public ,max-age= 31536000\" s3://spages.mobileposse.com",
     "aws-clear": "aws cloudfront create-invalidation --distribution-id E2SA8OWD3VYCAI --paths '/*'",
     "lint": "eslint src",
@@ -37,6 +37,7 @@
     "for-own": "^1.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
+    "local-web-server": "^3.0.7",
     "lodash.tail": "^4.1.1",
     "mixin-object": "^3.0.0",
     "node-sass": "^4.12.0",
@@ -47,19 +48,19 @@
     "sass-loader": "^7.3.1",
     "type-check": "^0.3.2",
     "webpack-bundle-analyzer": "^3.5.1",
-    "webpack-dashboard": "^3.2.0",
     "wordwrap": "^1.0.0"
   },
   "dependencies": {
     "preact": "^10.0.0-rc.3",
     "preact-context": "^1.1.3",
     "preact-material-components": "^1.6.0",
+    "preact-progress": "^1.0.0",
     "preact-render-to-string": "^5.0.6",
     "preact-router": "^3.0.1",
+    "preact-serve": "0.0.0",
     "react-ga": "^2.6.0",
     "react-gpt": "^2.0.1",
     "react-notify-toast": "^0.5.0",
-    "preact-progress": "^1.0.0",
     "react-star-rating-component": "^1.4.1"
   }
 }
