--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "preact-serve": "0.0.0",
     "react-ga": "^2.6.0",
     "react-gpt": "^2.0.1",
+    "react-image": "^2.2.0",
     "react-notify-toast": "^0.5.0",
     "react-particle-effect-button": "^1.0.1",
     "react-star-rating-component": "^1.4.1",
