--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "wordwrap": "^1.0.0"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "preact": "^10.0.0-rc.3",
     "preact-context": "^1.1.3",
     "preact-material-components": "^1.6.0",
@@ -64,6 +65,7 @@
     "react-notify-toast": "^0.5.0",
     "react-particle-effect-button": "^1.0.1",
     "react-star-rating-component": "^1.4.1",
-    "react-typed": "^1.2.0"
+    "react-typed": "^1.2.0",
+    "reactstrap": "^8.0.1"
   }
 }
