--- a/package.json
+++ b/package.json
@@ -28,44 +28,67 @@
     "maxEntrypointSize": 500000
   },
   "devDependencies": {
+    "@types/react": "^16.9.11",
     "aws": "0.0.3-2",
     "cache": "^2.1.0",
     "clear": "^0.1.0",
-    "eslint": "^6.4.0",
+    "eslint": "^6.6.0",
     "eslint-config-synacor": "^3.0.5",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-standard": "^4.0.1",
     "for-own": "^1.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "local-web-server": "^3.0.7",
     "lodash.tail": "^4.1.1",
     "mixin-object": "^3.0.0",
-    "node-sass": "^4.12.0",
+    "mocha": "^6.2.2",
+    "node-sass": "^4.13.0",
     "per-env": "^1.0.2",
-    "preact-cli": "^2.2.1",
+    "preact-cli": "^3.0.0-rc.6",
     "preact-render-spy": "^1.2.1",
+    "prettier": "^1.18.2",
     "s3-deploy": "^1.4.0",
     "sass-loader": "^7.3.1",
     "type-check": "^0.3.2",
-    "webpack-bundle-analyzer": "^3.5.1",
+    "webpack-bundle-analyzer": "^3.5.2",
     "wordwrap": "^1.0.0"
   },
   "dependencies": {
+    "@preact/cli-plugin-eslint": "0.0.4-alpha.0",
     "bootstrap": "^4.3.1",
-    "preact": "^10.0.0-rc.3",
-    "preact-context": "^1.1.3",
-    "preact-material-components": "^1.6.0",
+    "preact": "^10.0.1",
+    "preact-compat": "^3.19.0",
+    "preact-context": "^1.1.4",
+    "preact-material-components": "^1.6.1",
     "preact-progress": "^1.0.0",
     "preact-render-to-string": "^5.0.6",
     "preact-router": "^3.0.1",
     "preact-serve": "0.0.0",
-    "react-ga": "^2.6.0",
+    "react": "^16.11.0",
+    "react-ga": "^2.7.0",
     "react-gpt": "^2.0.1",
     "react-image": "^2.2.0",
-    "react-notify-toast": "^0.5.0",
+    "react-notify-toast": "^0.5.1",
     "react-particle-effect-button": "^1.0.1",
     "react-star-rating-component": "^1.4.1",
     "react-typed": "^1.2.0",
     "reactstrap": "^8.0.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
