--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   "dependencies": {
     "@preact/cli-plugin-eslint": "0.0.4-alpha.0",
     "bootstrap": "^4.3.1",
-    "preact": "^10.0.1",
+    "preact": "^10.0.4",
     "preact-compat": "^3.19.0",
     "preact-context": "^1.1.4",
     "preact-material-components": "^1.6.1",
@@ -70,6 +70,7 @@
     "preact-router": "^3.0.1",
     "preact-serve": "0.0.0",
     "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-ga": "^2.7.0",
     "react-gpt": "^2.0.1",
     "react-image": "^2.2.0",
@@ -77,7 +78,7 @@
     "react-particle-effect-button": "^1.0.1",
     "react-star-rating-component": "^1.4.1",
     "react-typed": "^1.2.0",
-    "reactstrap": "^8.0.1"
+    "reactstrap": "^8.1.1"
   },
   "browserslist": {
     "production": [
